--- a/Assest/style.css
+++ b/Assest/style.css
@@ -1,5 +1,6 @@
 html, body {
-    height: 100vh;
+    margin: 0;
+    padding: 0;
 }
 
 
@@ -400,6 +401,8 @@ input[type="submit"] {
     .main-container{
         overflow-y: auto;
         height: 100%;
+        width: 100%;
+        overflow-x: hidden;
     
     }
 
