--- a/Assest/style.css
+++ b/Assest/style.css
@@ -37,25 +37,33 @@ html, body {
  .menu {
     list-style: none;
     display: flex; 
-    justify-content: flex-end;
-    flex-direction: row;
+   
+    flex-direction: column;
     align-items: center;
     font-weight: 600;
-    background-color: rgb(14, 13, 36);
+    background-color: rgba(14, 13, 36,0.9);
     position: absolute;
     top: 100%;
     width: 100%;
     z-index: 1;
+    max-height: 0; 
+    overflow: hidden;
+    transition: max-height 1.2s ease;
+    
+
    
 } 
 
 .menu.active {
     display: flex;
+    max-height: 500px;
+  
 }
 
 .menu li {
     padding: 15px;
     margin-top: -50px;
+    
    
 }
 
@@ -64,7 +72,11 @@ html, body {
     color: white;
     font-weight: 600;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+    
 }
+
+
+
 .hamb{
     color: white;
     cursor: pointer;
@@ -180,11 +192,6 @@ html, body {
     width: 800px;
   
 }
-
-.card-img-top{
-    height:200px;
-}
-
 
 
 
@@ -413,6 +420,8 @@ input[type="submit"] {
    
     .menu {
         display: none;
+        
+       
     }
 
     .menu.active {
@@ -424,6 +433,7 @@ input[type="submit"] {
         background-color: rgb(14, 13, 36);
         z-index: 1;
         align-items: flex-start;
+        
     }
 
     .menu li {
