--- a/Assest/style.css
+++ b/Assest/style.css
@@ -19,98 +19,77 @@ html, body {
     height:100px;
 
 }   
-.logo{
+.logo {
     width: 9%;
     display: flex;
-    margin-top: -1px;
-   
+    align-items: center; /* Centra verticalmente il logo */
+    margin-top: 15px;
 }
+
+/* Stile per il menu */
 .menu-icon {
-    display: block; 
-}
- 
- .menu {
-        display: none;
-        list-style: none;
-        padding-bottom: 20px;
-        margin-top: 30px;
-    }
-
-    .menu.active {
-        margin-top: 0px;
-        display: flex;
-        flex-direction: column;
-        position: absolute;
-        top: 100%;
-        width: 100%;
-        background-color: rgb(14, 13, 36);
-        z-index: 1;
-        align-items: flex-start;
-    }
-.menu li a {
-    text-decoration: none;
-    color: white;
-    padding: 10px;
-    font-weight: 600;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-<<<<<<< HEAD
-} 
-.menu li {
-    padding: 10px;
-    margin-top: 10;  
-    text-align: left; /* Allinea il testo a sinistra */
+    display: block;
 }
 
-
-/* ___________________ */
- 
-=======
-}
-/* ___________________ */
- .menu {
-    list-style: none;
-    display: flex; 
-   
-    flex-direction: column;
+.navbar {
+    display: flex;
+    justify-content: space-between;
     align-items: center;
-    font-weight: 600;
-    background-color: rgba(14, 13, 36,0.9);
+    background-color: rgb(14, 13, 36);
+    width: 100%;
+    height: 100px;
+    padding: 0 20px; /* Aggiungi spaziatura interna */
+}
+
+.menu {
+    display: none;
+    list-style: none;
+    padding: 0;
+    margin: 0;
     position: absolute;
     top: 100%;
+    left: 0; /* Allinea il menu a sinistra */
     width: 100%;
+    background-color: rgb(14, 13, 36);
     z-index: 1;
-    max-height: 0; 
-    overflow: hidden;
-    transition: max-height 1.2s ease;
-    
-
-   
-} 
+    flex-direction: row; /* Disponi le voci del menu in orizzontale */
+    justify-content: space-around; /* Distribuisci uniformemente le voci del menu */
+    align-items: center; /* Centra verticalmente le voci del menu */
+}
 
 .menu.active {
     display: flex;
-    max-height: 500px;
-  
+    flex-direction: column;
+    position: absolute;
+    top: 100%;
+    width: 100%;
+    background-color: rgb(14, 13, 36);
+    z-index: 1;
+    align-items: flex-start;
+
+    
+    
 }
 
 .menu li {
-    padding: 15px;
-    margin-top: -50px;
+    margin: 30px;
+    margin-left: 10px; /* Rimuovi i margini superiori e inferiori */
+    text-align: left; /* Allinea il testo al centro */
     
+}
+
+.menu li a {
+    text-decoration: none;
+    color: white;
+    padding: 10px 20px; /* Aggiungi spaziatura interna orizzontale */
+    font-weight: 600;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+   
    
 }
 
-.menu a {
-    text-decoration: none;
-    color: white;
-    font-weight: 600;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    
-}
-
-
-
->>>>>>> 161a9a39e07da3e57eab8160f059651ab770e50a
+/* ___________________ */
+ 
 .hamb{
     color: white;
     cursor: pointer;
@@ -188,7 +167,7 @@ html, body {
     background-color: #09417c;
     color: #fff;
     border: none;
-    border-radius: 15px;
+    border-radius: 5px;
     cursor: pointer;
     margin-top: 120px;
     text-decoration: none;
@@ -213,7 +192,7 @@ html, body {
     padding: 10px 20px;
     background-color: #09417c;
     color: #fff;
-    border-radius: 15px;
+    border-radius: 5px;
     cursor: pointer;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     border: none;
@@ -226,6 +205,11 @@ html, body {
     width: 800px;
   
 }
+
+.card-img-top{
+    height:200px;
+}
+
 
 
 
@@ -259,13 +243,10 @@ html, body {
     border-radius: 5px;
     background-color: rgb(14, 13, 36); 
     color: white;
-    border-top-left-radius: 35px;
-    border-top-right-radius: 35px;
     
 }
 .custom-shadow{
-  box-shadow: 0px 5px 20px rgba(14, 13, 36, 0.7); 
-  border-radius: 35px;
+  box-shadow: 0px 5px 20px rgba(14, 13, 36, 0.7); ;
 }
 
 .user-details {
@@ -300,7 +281,6 @@ textarea {
 
 .form-textarea {
     margin-top: 10px;
-    
 }
 
 .button {
@@ -315,7 +295,7 @@ input[type="submit"] {
     background-color: #09417c;
     color: #fff;
     border: none;
-    border-radius: 15px;
+    border-radius: 5px;
     cursor: pointer;
 }
 
@@ -398,11 +378,19 @@ input[type="submit"] {
     
 /* MENU */
 .menu {
-    display: flex 
+   
+    display: flex ;
+    justify-content: flex-end; 
+
+
+}
+.menu li {
+    margin-top: -50px;
+    margin-right: 5px; 
 }
 
 .menu-icon {
-    display: none; /
+    display: none; 
 }
 .btn-cv:hover{
     text-decoration: none;  
@@ -440,7 +428,7 @@ input[type="submit"] {
 }
 .description h3 {
     margin-left: 30px;
-    font-size: 20px; /
+    font-size: 20px; /* Riduci la dimensione del testo */
 }
 
     .main-container{
@@ -452,54 +440,21 @@ input[type="submit"] {
     }
 
     .logo {
-
-            width: 12%;
-            display: flex;
-    
-            margin-top: 20px;
-        }
        
-        
+        margin-top: 20px;
     }
+   .menu{
    
-<<<<<<< HEAD
+    background-color: rgba(14, 13, 36,0.8);
+   }
     
-=======
-    .menu {
-        display: none;
-        
-       
-    }
-
-    .menu.active {
-        display: flex;
-        flex-direction: column;
-        position: absolute;
-        top: 100%;
-        width: 100%;
-        background-color: rgb(14, 13, 36);
-        z-index: 1;
-        align-items: flex-start;
-        
-    }
-
-    .menu li {
-        text-align: left;
-        border-bottom: none;
-        padding: 10px;
-        margin: 10px;
-    }
-    .menu-icon{
-        padding: 20px;
-    }
->>>>>>> 161a9a39e07da3e57eab8160f059651ab770e50a
     .card-img-top{
         height: 300px;
     }
     
 
    
-
+}
 
 
 
