--- a/Assest/style.css
+++ b/Assest/style.css
@@ -142,7 +142,7 @@ html, body {
     background-color: #09417c;
     color: #fff;
     border: none;
-    border-radius: 5px;
+    border-radius: 15px;
     cursor: pointer;
     margin-top: 120px;
     text-decoration: none;
@@ -167,7 +167,7 @@ html, body {
     padding: 10px 20px;
     background-color: #09417c;
     color: #fff;
-    border-radius: 5px;
+    border-radius: 15px;
     cursor: pointer;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     border: none;
@@ -215,13 +215,15 @@ html, body {
     margin: 0 auto;
     padding: 30px;
     border: 1px solid #ccc;
-    border-radius: 5px;
+    border-top-left-radius: 30px;
+    border-top-right-radius: 30px;
     background-color: rgb(14, 13, 36); 
     color: white;
     
 }
 .custom-shadow{
-  box-shadow: 0px 5px 20px rgba(14, 13, 36, 0.7); ;
+  box-shadow: 0px 5px 20px rgba(14, 13, 36, 0.7); 
+  border-radius: 30px;
 }
 
 .user-details {
@@ -270,7 +272,7 @@ input[type="submit"] {
     background-color: #09417c;
     color: #fff;
     border: none;
-    border-radius: 5px;
+    border-radius: 15px;
     cursor: pointer;
 }
 
