--- a/Assest/style.css
+++ b/Assest/style.css
@@ -1,3 +1,4 @@
+
 html, body {
     margin: 0;
     padding: 0;
@@ -109,7 +110,7 @@ html, body {
 .aboutTitle{
   color: rgb(25, 93, 152);
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
-  margin-bottom:40px;
+  margin-bottom:-50px;
 }
     .description {
         font-family: 'Arial Narrow Bold', sans-serif;
@@ -142,7 +143,7 @@ html, body {
     background-color: #09417c;
     color: #fff;
     border: none;
-    border-radius: 5px;
+    border-radius: 15px;
     cursor: pointer;
     margin-top: 120px;
     text-decoration: none;
@@ -167,13 +168,14 @@ html, body {
     padding: 10px 20px;
     background-color: #09417c;
     color: #fff;
-    border-radius: 5px;
+    border-radius: 15px;
     cursor: pointer;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     border: none;
     width: 90px;
 }
 .container-card{
+    margin-top: -50px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -215,13 +217,15 @@ html, body {
     margin: 0 auto;
     padding: 30px;
     border: 1px solid #ccc;
-    border-radius: 5px;
+    border-top-left-radius: 30px;
+    border-top-right-radius: 30px;
     background-color: rgb(14, 13, 36); 
     color: white;
     
 }
 .custom-shadow{
-  box-shadow: 0px 5px 20px rgba(14, 13, 36, 0.7); ;
+  box-shadow: 0px 5px 20px rgba(14, 13, 36, 0.7);  border-radius: 30px;
+  border-radius: 30px;
 }
 
 .user-details {
@@ -270,7 +274,7 @@ input[type="submit"] {
     background-color: #09417c;
     color: #fff;
     border: none;
-    border-radius: 5px;
+    border-radius: 15px;
     cursor: pointer;
 }
 
@@ -354,11 +358,13 @@ input[type="submit"] {
 /* MENU */
 .menu {
     display: flex 
+    
 }
 
 .menu-icon {
-    display: none; /
+    display: none; 
 }
+
 .btn-cv:hover{
     text-decoration: none;  
     background-color: #b3d2f3;
@@ -413,6 +419,7 @@ input[type="submit"] {
    
     .menu {
         display: none;
+        
     }
 
     .menu.active {
@@ -421,7 +428,7 @@ input[type="submit"] {
         position: absolute;
         top: 100%;
         width: 100%;
-        background-color: rgb(14, 13, 36);
+        background-color: rgba(14, 13, 36,0.8);
         z-index: 1;
         align-items: flex-start;
     }
@@ -457,3 +464,7 @@ input[type="submit"] {
     text-align: center;
     
 }
+
+
+
+
