--- a/Assest/style.css
+++ b/Assest/style.css
@@ -125,7 +125,7 @@ html, body {
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7)
 
 }
-/*---> About */
+/*---> About.. */
 .about{
     display: flex;
     justify-content: center;
