--- a/Assest/style.css
+++ b/Assest/style.css
@@ -47,11 +47,15 @@ html, body {
     top: 100%;
     width: 100%;
     z-index: 1;
+    
+    
    
 } 
 
 .menu.active {
     display: flex;
+    
+    
     
 }
 
@@ -78,7 +82,7 @@ html, body {
     display: none;
     color: white;
     cursor: pointer;
-    font-size: xx-large;
+    font-size: x-large;
 }
 
 
@@ -437,6 +441,7 @@ input[type="submit"] {
         background-color: rgb(14, 13, 36);
         width: 100%;
         z-index: 1;
+        
 
         
     }
