--- a/Assest/style.css
+++ b/Assest/style.css
@@ -107,7 +107,7 @@ html, body {
  .title{
     color: rgb(25, 93, 152);
     display:flex;
-    margin-bottom:50px;
+    margin-bottom:250px;
     justify-content: center;
     margin-top:150px;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
@@ -119,6 +119,7 @@ html, body {
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    background-color: #b3d2f370;
 }
 .aboutTitle{
   color: rgb(25, 93, 152);
@@ -140,7 +141,7 @@ html, body {
     }
 
 .skill{
-    padding: 100px;
+    padding: 10px;
     color: rgb(25, 93, 152);
     text-align: center;
     
@@ -181,6 +182,9 @@ html, body {
    
    
 }
+
+
+
 .card .btn-primary {
     padding: 10px 20px;
     background-color: #09417c;
@@ -390,8 +394,19 @@ input[type="submit"] {
 
 }
 
+.skill{
+    padding: 100px;
+    color: rgb(25, 93, 152);
+    text-align: center;
+    
+}
+.description {
+  
+   margin-top: -50px;
+    padding: 100px;
+   
 
-
+}
 
 
 
@@ -408,14 +423,14 @@ input[type="submit"] {
         margin: 30px;
     }
 .title{
-    font-size: 25px;
+    font-size: 30px;
 }
 .description{
-    padding: 50px;
+    padding: 10px;
 
 }
 .description h3 {
-    margin-left: 30px;
+    margin: 10px;
     font-size: 20px; 
 }
 
