--- a/Assest/style.css
+++ b/Assest/style.css
@@ -112,7 +112,7 @@ html, body {
     margin-top:140px;
     padding: 20px;
     white-space: nowrap;
-    font-size: 23px; 
+    font-size: 25px; 
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
 
 }
@@ -122,7 +122,13 @@ html, body {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    background-color: #b3d2f370;
+    /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#f2f6f8+0,d8e1e7+50,b5c6d0+51,e0eff9+100;Grey+Gloss+%232 */
+background: rgb(242,246,248); /* Old browsers */
+background: -moz-linear-gradient(top,  rgba(242,246,248,1) 0%, rgba(216,225,231,1) 50%, rgba(181,198,208,1) 51%, rgba(224,239,249,1) 100%); /* FF3.6-15 */
+background: -webkit-linear-gradient(top,  rgba(242,246,248,1) 0%,rgba(216,225,231,1) 50%,rgba(181,198,208,1) 51%,rgba(224,239,249,1) 100%); /* Chrome10-25,Safari5.1-6 */
+background: linear-gradient(to bottom,  rgba(242,246,248,1) 0%,rgba(216,225,231,1) 50%,rgba(181,198,208,1) 51%,rgba(224,239,249,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f2f6f8', endColorstr='#e0eff9',GradientType=0 ); /* IE6-9 */
+
 }
 .aboutTitle{
   color: rgb(25, 93, 152);
@@ -131,7 +137,7 @@ html, body {
   
 }
     .description {
-        font-family: Verdana, Geneva, Tahoma, sans-serif;
+    
         color: rgb(25, 93, 152);
         max-width: 100%;
         margin: 0 auto; 
@@ -139,9 +145,14 @@ html, body {
 
     }
     .description h3{
+        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
         font-size: 20px;
         padding-left: 120px;
         padding-right: 120px;
+        font-weight: 500;
+        font-style: italic;
+        text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
+
     }
 
 .skill{
@@ -401,9 +412,12 @@ input[type="submit"] {
     color:#09417c;
 
 }
-
+.description h3{
+    font-size: 25px;
+}
 
 .description {
+    
   
    margin-top: -50px;
     padding-top: 100px;
