--- a/Assest/style.css
+++ b/Assest/style.css
@@ -133,7 +133,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f2f6f8', end
 .aboutTitle{
   color: rgb(25, 93, 152);
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
-  margin-bottom:40px;
+  margin:60px;
   
 }
     .description {
@@ -190,13 +190,11 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f2f6f8', end
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    padding-top: 150px;
+    padding-top: -30px;
     color: rgb(25, 93, 152);
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
-    
-   
-   
 }
+
 
 
 
@@ -211,7 +209,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f2f6f8', end
     width: 90px;
 }
 .container-card{
-    margin-top: -80px;
+    margin-top: -70px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -236,7 +234,9 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f2f6f8', end
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    padding: 100px;
+    padding-top: 40px;
+  
+    
     width: 600px;
     color: rgb(25, 93, 152);
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7)
@@ -247,11 +247,10 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f2f6f8', end
 }
 
 .contact-form {
-    margin-top:50px;
     max-width: 350px;
     height: 620px;
     margin: 0 auto;
-    padding: 30px;
+    padding: 20px;
     border: 1px solid #ccc;
     border-top-left-radius: 50px;
     border-top-right-radius: 50px;
@@ -262,6 +261,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f2f6f8', end
 .custom-shadow{
   box-shadow: 0px 5px 20px rgba(14, 13, 36, 0.7); 
   border-radius: 50px;
+  
 }
 
 .user-details {
@@ -312,6 +312,7 @@ input[type="submit"] {
     border: none;
     border-radius: 5px;
     cursor: pointer;
+    font-weight: 500;
 }
 
 .contact-links {
