--- a/Assest/style.css
+++ b/Assest/style.css
@@ -1,6 +1,8 @@
 html, body {
     margin: 0;
     padding: 0;
+    overflow-x: hidden;
+
 }
 
 
@@ -165,7 +167,7 @@ html, body {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#f2f6f8+0,d8e1e7+50,b5c6d0+51,e0eff9+100;Grey+Gloss+%232 */
+ 
 background: rgb(242,246,248); /* Old browsers */
 background: -moz-linear-gradient(top,  rgba(242,246,248,1) 0%, rgba(216,225,231,1) 50%, rgba(181,198,208,1) 51%, rgba(224,239,249,1) 100%); /* FF3.6-15 */
 background: -webkit-linear-gradient(top,  rgba(242,246,248,1) 0%,rgba(216,225,231,1) 50%,rgba(181,198,208,1) 51%,rgba(224,239,249,1) 100%); /* Chrome10-25,Safari5.1-6 */
@@ -176,7 +178,8 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f2f6f8', end
 .aboutTitle{
   color: rgb(25, 93, 152);
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
-  margin:60px;
+  margin:20px;
+  
   
 }
     .description {
@@ -485,6 +488,11 @@ input[type="submit"] {
 }
 .title{
     font-size: 60px;
+    
+}
+.aboutTitle{
+    margin-top: 100px;
+    
 }
 
 
